# Didim365

./: README.md
LangChain/: README.md  report.md
LangChain/LangChain/: README.md
LangChain/app/: main.py
LangChain/example/: ex_chatopenai_model.py  ex_gradio.py  ex_openai_model.py  ex_template.py
assignment/LangChain/: README.md
assignment/python/: fruit_generator.py  fruit_list.py  gen_test.py  list_test.py  test.py
assignment/sLLM/: README.md  Text2SQL.ipynb  TinyLlama_YUNYOSEOB.ipynb
education/: README.md
education/KafkaConnect/: KafkaConnect정리1편.md  KafkaConnect정리2편.md  강의소개와실습환경구축.md
education/SpringBoot/: README.md
research/: DeepSpeed&RunPod_YUNYOSEOB.md  DeepSpeed_Setting.md  DeepSpeed_YUNYOSEOB.ipynb  DeepSpeed_YUNYOSEOB_ipynb의_사본.ipynb  DeepSpeed_research.md
research/AMP-Rag-Extension/: config.yml  main.py  pyproject.toml
research/AMP-Rag-Extension/app/: settings.py
research/AMP-Rag-Extension/app/spiders/: api_scraper.py  web_scraper.py
research/stream/: README.md  pyproject.toml
research/stream/app/: config.py  main.py
research/stream/frontend/: index.html
research/stream/test/: api.http
sLLM/: README.md
work_log/2022/: 2022-09.md  2022-10.md  2022-11.md  2022-12.md
work_log/2023/: 2023-01.md  2023-03.md  2023-04.md  2023-05.md  2023-06.md  2023-07.md  2023-08.md  2023-09.md  2023-10.md  2023-11.md
work_log/개인공부/: Self_Study.md
work_log/개인과제/: Kafka실습.md  ReedwoodK수행과제#1.md
work_log/인턴과제모음/: day1-github구성_보고서.md  day2-linux-명령어_보고서.md  day3-git-명령어_보고서.md  day4-java문법_보고서.md  day5-jdbc_코딩.md  day6-database_보고서.md  (+2 more)
(+167 files in other folders)
