[tool.poetry]
name = "stream"
version = "0.1.0"
description = ""
authors = ["yunyoseob <imyoseob@naver.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.96.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = ">=2"
pydantic-settings = ">=2"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
openai = "^1.31.0"
langchain-openai = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
